VP-001-D Changed a default text to a hint [ZMarkus, SP]

--- a/App/app/src/main/res/layout/activity_main.xml
+++ b/App/app/src/main/res/layout/activity_main.xml
@@ -75,7 +75,7 @@
                 android:layout_weight="1"
                 android:ems="10"
                 android:inputType="number"
-                android:text="Passport Number" />
+                android:hint="Passport Number" />
 
             <EditText
                 android:id="@+id/editTextTextPassword"
