--- a/App/app/src/main/res/layout/activity_vaccine_list.xml
+++ b/App/app/src/main/res/layout/activity_vaccine_list.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -11,6 +11,7 @@
     >
 
     <TextView
+        android:id="@+id/tvVaccineName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Disease"
@@ -20,6 +21,7 @@
     />
 
     <TextView
+        android:id="@+id/tvVaccineDate"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Date"
@@ -28,7 +30,7 @@
         app:layout_constraintEnd_toEndOf="parent"
     />
 
-    <android.support.v7.widget.RecyclerView
+    <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rvVaccineList"
         android:layout_width="match_parent"
         android:layout_height="400dp"
@@ -36,4 +38,4 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
     />
-</android.support.constraint.ConstraintLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
