--- a/App/app/src/main/res/layout/activity_vaccine_list.xml
+++ b/App/app/src/main/res/layout/activity_vaccine_list.xml
@@ -6,8 +6,8 @@
     android:layout_height="match_parent"
     tools:context=".VaccineList"
     android:paddingStart="8dp"
-    android:paddingEnd="8dp"
-    android:paddingBottom="8dp"
+    android:paddingEnd="12dp"
+    android:paddingBottom="12dp"
     >
 
     <TextView
@@ -20,6 +20,7 @@
     />
 
     <TextView
+        android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Date"
@@ -31,9 +32,11 @@
     <android.support.v7.widget.RecyclerView
         android:id="@+id/rvVaccineList"
         android:layout_width="match_parent"
-        android:layout_height="400dp"
+        android:layout_height="match_parent"
+        app:layoutManager="android.support.v7.widget.LinearLayoutManager"
+        android:layout_marginTop="40dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-    />
+        app:layout_constraintTop_toTopOf="parent" />
 </android.support.constraint.ConstraintLayout>
