--- a/App/app/src/main/res/layout/vaccine_list_item.xml
+++ b/App/app/src/main/res/layout/vaccine_list_item.xml
@@ -3,10 +3,11 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="80dp"
-    android:paddingStart="8dp"
-    android:paddingEnd="8dp"
-    android:background="#E8A2B4">
+    android:layout_height="50dp"
+    android:layout_marginTop="5dp"
+    android:paddingStart="12dp"
+    android:paddingEnd="12dp"
+    android:background="@drawable/vaccine_list_item_boarder">
 
     <TextView
         android:id="@+id/tvVaccineName"
