--- a/App/app/src/main/res/values/colors.xml
+++ b/App/app/src/main/res/values/colors.xml
@@ -7,4 +7,7 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="BackgroundAccent">#FFC5C5</color>
+    <color name="BackgroundDark">#CC9292</color>
+    <color name="LinkBase">#2196F3</color>
 </resources>
