--- a/App/app/src/main/res/layout/activity_main.xml
+++ b/App/app/src/main/res/layout/activity_main.xml
@@ -68,6 +68,15 @@
                 android:textAlignment="center"
                 android:textSize="30sp" />
 
+            <TextView
+                android:id="@+id/errorMessageView"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Error Message Field"
+                android:textColor="@color/design_default_color_error"
+                android:textSize="14sp"
+                android:visibility="invisible" />
+
             <EditText
                 android:id="@+id/editTextTextPersonName"
                 android:layout_width="match_parent"
