VP-002 solve design/findbytxtview [GN, ZMartin]

--- a/App/app/src/main/res/layout/activity_user_profile.xml
+++ b/App/app/src/main/res/layout/activity_user_profile.xml
@@ -4,136 +4,114 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
-
-        <LinearLayout
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/constraintLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="#FFC5C5"
-        android:orientation="horizontal">
-
-            <Button
-                android:id="@+id/menuButton"
-                android:layout_width="60dp"
-                android:layout_height="60dp"
-                android:layout_weight="0"
-                android:text="@string/button_minus" />
-
-            <Space
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="1" />
-
-            <ImageButton
-                android:id="@+id/profileButton"
-                android:layout_width="60dp"
-                android:layout_height="60dp"
-                android:layout_weight="0"
-                app:srcCompat="@drawable/ic_launcher_foreground" />
-
-        </LinearLayout>
-
-    </LinearLayout>
-
-
-    <ImageView
-        android:id="@+id/imPassportImage"
-        android:layout_width="96dp"
-        android:layout_height="138dp"
-        android:layout_marginStart="30dp"
-        android:layout_marginTop="140dp"
+        android:layout_marginBottom="148dp"
+        app:layout_constraintBottom_toTopOf="@+id/imSeeVacList"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:src="@drawable/profilepic" />
+        app:layout_constraintTop_toTopOf="parent">
 
-    <TextView
-        android:id="@+id/tvNameDisplay"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="45dp"
-        android:layout_marginTop="140dp"
-        android:text="@string/tv_name"
-        app:layout_constraintStart_toEndOf="@+id/imPassportImage"
-        app:layout_constraintTop_toTopOf="parent" />
+        <ImageView
+            android:id="@+id/imPassportImage"
+            android:layout_width="96dp"
+            android:layout_height="138dp"
+            android:layout_marginStart="30dp"
+            android:layout_marginTop="140dp"
+            android:src="@drawable/profilepic"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
-    <TextView
-        android:id="@+id/tvAgeDisplay"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="45dp"
-        android:layout_marginTop="20dp"
-        android:text="@string/tv_age"
-        app:layout_constraintStart_toEndOf="@+id/imPassportImage"
-        app:layout_constraintTop_toBottomOf="@+id/tvNameDisplay" />
+        <TextView
+            android:id="@+id/tvNameDisplay"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="45dp"
+            android:layout_marginTop="140dp"
+            android:text="@string/tv_name"
+            app:layout_constraintStart_toEndOf="@+id/imPassportImage"
+            app:layout_constraintTop_toTopOf="parent" />
 
-    <TextView
-        android:id="@+id/tvPassNrDisplay"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="45dp"
-        android:layout_marginTop="20dp"
-        android:text="@string/tv_passNr"
-        app:layout_constraintStart_toEndOf="@+id/imPassportImage"
-        app:layout_constraintTop_toBottomOf="@+id/tvAgeDisplay" />
+        <TextView
+            android:id="@+id/tvAgeDisplay"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="45dp"
+            android:layout_marginTop="20dp"
+            android:text="@string/tv_age"
+            app:layout_constraintStart_toEndOf="@+id/imPassportImage"
+            app:layout_constraintTop_toBottomOf="@+id/tvNameDisplay" />
 
-    <TextView
-        android:id="@+id/tvNrVacDisplay"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="45dp"
-        android:layout_marginTop="20dp"
-        android:text="@string/tv_nrVac"
-        app:layout_constraintStart_toEndOf="@+id/imPassportImage"
-        app:layout_constraintTop_toBottomOf="@+id/tvPassNrDisplay" />
+        <TextView
+            android:id="@+id/tvPassNrDisplay"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="45dp"
+            android:layout_marginTop="20dp"
+            android:text="@string/tv_passNr"
+            app:layout_constraintStart_toEndOf="@+id/imPassportImage"
+            app:layout_constraintTop_toBottomOf="@+id/tvAgeDisplay" />
 
-    <TextView
-        android:id="@+id/tvNameText"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="140dp"
-        android:layout_marginEnd="30dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        <TextView
+            android:id="@+id/tvNrVacDisplay"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="45dp"
+            android:layout_marginTop="20dp"
+            android:text="@string/tv_nrVac"
+            app:layout_constraintStart_toEndOf="@+id/imPassportImage"
+            app:layout_constraintTop_toBottomOf="@+id/tvPassNrDisplay" />
 
-    <TextView
-        android:id="@+id/tvAgeText"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
-        android:layout_marginEnd="30dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tvNameText" />
+        <TextView
+            android:id="@+id/tvNameText"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="140dp"
+            android:layout_marginEnd="30dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
-    <TextView
-        android:id="@+id/tvPassNrText"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
-        android:layout_marginEnd="30dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tvAgeText" />
+        <TextView
+            android:id="@+id/tvAgeText"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
+            android:layout_marginEnd="30dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/tvNameText" />
 
-    <TextView
-        android:id="@+id/tvNrVacText"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
-        android:layout_marginEnd="30dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tvPassNrText" />
+        <TextView
+            android:id="@+id/tvPassNrText"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
+            android:layout_marginEnd="30dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/tvAgeText" />
+
+        <TextView
+            android:id="@+id/tvNrVacText"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
+            android:layout_marginEnd="30dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/tvPassNrText" />
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
 
     <ImageView
         android:id="@+id/imSeeVacList"
         android:layout_width="190dp"
         android:layout_height="186dp"
-        android:layout_marginEnd="105dp"
         android:layout_marginBottom="120dp"
         android:adjustViewBounds="false"
+        android:onClick="showingVacList"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:srcCompat="@drawable/seemyvac" />
 
 
