--- a/App/app/src/main/res/layout/activity_main.xml
+++ b/App/app/src/main/res/layout/activity_main.xml
@@ -29,7 +29,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
-            android:text="Login"
+            android:text="@string/loginTitle"
             android:textAlignment="center"
             android:textSize="30sp"
             app:layout_constraintStart_toStartOf="parent"
@@ -39,7 +39,7 @@
             android:id="@+id/errorMessageView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Error Message Field"
+            android:text="@string/errorMessageDefault"
             android:textColor="@color/design_default_color_error"
             android:textSize="14sp"
             android:visibility="invisible"
@@ -54,7 +54,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="30dp"
             android:ems="10"
-            android:hint="Passport Number"
+            android:hint="@string/passportNumberHint"
             android:inputType="number"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/loginTitle" />
@@ -65,7 +65,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
             android:ems="10"
-            android:hint="Password"
+            android:hint="@string/passwordHint"
             android:inputType="textPassword"
             app:layout_constraintTop_toBottomOf="@id/loginPassportNumber" />
 
@@ -75,7 +75,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
             android:backgroundTint="@color/BackgroundAccent"
-            android:text="Login"
+            android:text="@string/loginButton"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/loginPassword" />
@@ -93,7 +93,7 @@
                 android:id="@+id/textView"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Don't have an account? "
+                android:text="@string/noAccountInformation"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
@@ -101,7 +101,7 @@
                 android:id="@+id/SignUpButton"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Sing up"
+                android:text="@string/singUpLink"
                 android:textColor="@color/LinkBase"
                 app:layout_constraintStart_toEndOf="@id/textView"
                 app:layout_constraintTop_toTopOf="parent" />
