--- a/App/app/src/main/res/layout/activity_main.xml
+++ b/App/app/src/main/res/layout/activity_main.xml
@@ -101,6 +101,7 @@
                 android:id="@+id/SignUpButton"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:onClick="onRegisterClicked"
                 android:text="@string/singUpLink"
                 android:textColor="@color/LinkBase"
                 app:layout_constraintStart_toEndOf="@id/textView"
