--- a/App/app/src/main/res/layout/activity_user_profile.xml
+++ b/App/app/src/main/res/layout/activity_user_profile.xml
@@ -149,6 +149,7 @@
             android:background="@drawable/ic_rectangle"
             android:gravity="center"
             android:text="@string/see_my_vaccines"
+            android:onClick="showingVacList"
             app:layout_constraintBottom_toTopOf="@+id/imSeeVacList"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
