VP-011-C fix action bar bug, fixed sign up link typo, added test for language button [MF, ZMartin, GN]

--- a/App/app/src/main/res/values-night/themes.xml
+++ b/App/app/src/main/res/values-night/themes.xml
@@ -1,6 +1,6 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Theme.VaccinationPassport" parent="Theme.AppCompat.Light.DarkActionBar">
+    <style name="Theme.VaccinationPassport" parent="Theme.AppCompat.Light.NoActionBar">
         <!-- Primary brand color. -->
         <item name="colorPrimary">@color/BackgroundAccent</item>
         <item name="colorPrimaryDark">@color/BackgroundDark</item>
