--- a/App/app/src/main/res/menu/context_menu.xml
+++ b/App/app/src/main/res/menu/context_menu.xml
@@ -7,7 +7,10 @@
     <item android:id="@+id/btn_about_page"
         android:title="About"
         />
-    <item android:id="@+id/btn_language"
+    <item android:id="@+id/btn_language_ru"
         android:title="Russian"
+        />
+    <item android:id="@+id/btn_language_en"
+        android:title="English"
         />
 </menu>
