VP-011-C Fixed tests [MF, ZMartin]

--- a/App/app/src/main/res/layout/activity_vaccine_list.xml
+++ b/App/app/src/main/res/layout/activity_vaccine_list.xml
@@ -14,7 +14,7 @@
         android:id="@+id/tvVaccineName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Disease"
+        android:text="@string/disease"
         android:textSize="28sp"
         app:layout_constraintBottom_toTopOf="@+id/rvVaccineList"
         app:layout_constraintStart_toStartOf="parent"
@@ -24,7 +24,7 @@
         android:id="@+id/tvVaccineDate"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Date"
+        android:text="@string/date"
         android:textSize="28sp"
         app:layout_constraintBottom_toTopOf="@+id/rvVaccineList"
         app:layout_constraintEnd_toEndOf="parent"
