--- a/App/app/src/main/res/layout/activity_vaccine_list.xml
+++ b/App/app/src/main/res/layout/activity_vaccine_list.xml
@@ -5,16 +5,30 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <LinearLayout
+        android:id="@+id/user_profile"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:paddingTop="50dp"
+        android:layout_marginBottom="56dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:ignore="MissingConstraints">
+
+        <include layout="@layout/user_profile_layout" />
+    </LinearLayout>
+
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/vaccine_list_layout"
         android:layout_width="match_parent"
-
+        app:layout_constraintTop_toBottomOf="@+id/user_profile"
         android:layout_height="wrap_content"
-        android:paddingStart="16dp"
-        android:paddingTop="50dp"
+        android:paddingStart="12dp"
         android:paddingEnd="12dp"
         android:paddingBottom="12dp"
-        app:layout_constraintTop_toTopOf="parent"
+        android:paddingTop="50dp"
         tools:context=".VaccineListActivity">
 
 
@@ -24,6 +38,7 @@
             android:layout_height="wrap_content"
             android:text="@string/disease"
             android:textSize="28sp"
+            android:paddingStart="12dp"
             app:layout_constraintBottom_toTopOf="@+id/rvVaccineList"
             app:layout_constraintStart_toStartOf="parent" />
 
@@ -33,6 +48,7 @@
             android:layout_height="wrap_content"
             android:text="@string/date"
             android:textSize="28sp"
+            android:paddingEnd="12dp"
             app:layout_constraintBottom_toTopOf="@+id/rvVaccineList"
             app:layout_constraintEnd_toEndOf="parent" />
 
