VP-004-C Display real vaccination data in user vaccination list [FM,RI]

--- a/App/app/src/main/res/drawable/vaccine_list_item_boarder.xml
+++ b/App/app/src/main/res/drawable/vaccine_list_item_boarder.xml
@@ -11,7 +11,7 @@
     <corners android:radius="10dp" />
 
     <solid
-        android:color="#FFC0CB"
+        android:color="#FFFFFF"
         />
 
     // Add your desired padding
