VP-005 basic UI for single vaccines view [GN, MF, RI]

--- a/App/app/src/main/res/layout/vaccine_list_item.xml
+++ b/App/app/src/main/res/layout/vaccine_list_item.xml
@@ -7,6 +7,8 @@
     android:layout_marginTop="5dp"
     android:paddingStart="12dp"
     android:paddingEnd="12dp"
+    android:clickable="true"
+    android:onClick="onSingleVacView"
     android:background="@drawable/vaccine_list_item_boarder">
 
     <TextView
